@@ -1,3 +1,8 @@
+Mon Apr 13 18:12:55 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* port.rb: [BUG#49]用デバッグコード追加
+	* n-file-output.eb, n-group_by.rb, port.rb:  Log:*_exception self追加
+	
 Mon Apr 13 16:13:20 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* bin/controller, bin/processor, master.rb, node.rb, base-app:
